--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     <h4>Books</h4>
     <ul>
         <li>The Discovery of Witches Trilogy</li>
+        <li>All The Light We Cannot See</li>
         <li>50 Shades of Grey</li>
-        <li>The Tea Room</li>
     </ul>
     <h4>Hobbies</h4>
     <ol>
